...
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/co2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="26dp"

...
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="35dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Logout" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

